# frappe_betterprint_server

./: README.md  install.sh  playwright_server.py  pyproject.toml  update.sh
betterprint_server/: global_queue.py  main.py
betterprint_server/logging/: logger.py
betterprint_server/server/: application.py  start_server.py  validation.py
betterprint_server/validation/: printvalidator.py
betterprint_server/worker/: js.py  task_manager.py  ultility.py  worker.py  worker_queue.py
playwright_server/: global_queue.py  main.py
playwright_server/logging/: logger.py
playwright_server/server/: application.py  start_server.py
playwright_server/worker/: js.py  task_manager.py  worker.py  worker_queue.py
