[project]
name = "playwright_server"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.16.0",
    "playwright>=1.47.0",
    "waitress>=3.0.0",
    "werkzeug>=3.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
playwright_server = "playwright_server.main:main"
